syntax = "proto3";

package Ydb.Discovery.V1;

option go_package = "github.com/ydb-platform/ydb-go-genproto/Ydb_Discovery_V1";
option java_package = "com.yandex.ydb.discovery.v1";

import "protos/ydb_discovery.proto";

service DiscoveryService {
    rpc ListEndpoints(Ydb.Discovery.ListEndpointsRequest) returns (Ydb.Discovery.ListEndpointsResponse);
    rpc WhoAmI(Ydb.Discovery.WhoAmIRequest) returns (Ydb.Discovery.WhoAmIResponse);
}
