syntax = "proto3";

package Ydb.Scripting.V1;

option go_package = "github.com/ydb-platform/ydb-go-genproto/Ydb_Scripting_V1";
option java_package = "com.yandex.ydb.scripting.v1";

import "protos/ydb_scripting.proto";

service ScriptingService {
    rpc ExecuteYql(Scripting.ExecuteYqlRequest) returns (Scripting.ExecuteYqlResponse);

    // Executes yql request with streaming result.
    rpc StreamExecuteYql(Scripting.ExecuteYqlRequest) returns (stream Scripting.ExecuteYqlPartialResponse);

    rpc ExplainYql(Scripting.ExplainYqlRequest) returns (Scripting.ExplainYqlResponse);
}
